fix spacing of header list items for desktop view

--- a/themes/sacre-davey/sass/_header.scss
+++ b/themes/sacre-davey/sass/_header.scss
@@ -78,7 +78,7 @@
 
     @include desktop {
       padding-bottom: 0;
-      padding-right: 3vw;
+      white-space: nowrap;
     }
   }
   a {
